PyMaker/datas/object2/RawHTML/i17101/Python_DOC_referPages.how-to-use-an-attribute-that-has-colon-in-ite-name.txt
<div class="post-text" itemprop="text">
<p>When an object attribute has colon in its name, how to use the attribute? The code where I came across this situation is :</p>
<pre><code>instances = nova.servers.list()
for i in instances:
        print i.id, i.OS-EXT-SRV-ATTR:hypervisor_hostname
</code></pre>
<p>After looking at the link <a href="https://stackoverflow.com/questions/15243858/find-all-elements-given-namespaced-attribute">Find All Elements Given Namespaced Attribute</a> and <a href="https://stackoverflow.com/questions/19913504/how-do-i-escape-a-colon-in-python-format-when-using-kwargs">How do I escape a colon in Python format() when using kwargs?</a>
I tried using attr as </p>
<pre><code>instances = nova.servers.list()
for i in instances:
        print i.id, i.(attr={"OS-EXT-SRV-ATTR":"hypervisor_hostname"})
</code></pre>
<p>But it gives error as Invalid syntax. How should I use the attribute OS-EXT-SRV-ATTR:hypervisor_hostname</p>
</div>
<div class="post-text" itemprop="text">
<p>Don't use objects with attributes with such names. Use a dict.</p>
<p>It's possible to set and get attributes with invalid Python names:</p>
<pre><code>Python 2.7.5+ (default, Sep 19 2013, 13:48:49) 

&gt;&gt;&gt; class A():
...     pass
... 

&gt;&gt;&gt; a = A()

&gt;&gt;&gt; setattr(a, 'OS-EXT-SRV-ATTR:hypervisor_hostname', 'some_string')

&gt;&gt;&gt; a.OS-EXT-SRV-ATTR:hypervisor_hostname
  File "&lt;ipython-input-5-849986a021bc&gt;", line 1
    a.OS-EXT-SRV-ATTR:hypervisor_hostname
                     ^
SyntaxError: invalid syntax


&gt;&gt;&gt; getattr(a, 'OS-EXT-SRV-ATTR:hypervisor_hostname')
&gt;&gt;&gt; 'some_string'

&gt;&gt;&gt; 
</code></pre>
<p>But don't do this, use a dict to store this info, not object's attributes.</p>
</div>
<div class="post-text" itemprop="text">
<p>With <a href="https://docs.python.org/3/library/functions.html#setattr" rel="nofollow noreferrer">setattr(object, name, value</a>) and read it with <a href="https://docs.python.org/3/library/functions.html#getattr" rel="nofollow noreferrer">getattr(object, name[, default])</a>¶</p>
<p>see also
<a href="https://stackoverflow.com/questions/285061/how-do-you-programmatically-set-an-attribute">How do you programmatically set an attribute?</a></p>
<p>Why do you want to do this? I found myself in a situation where I needed wrap an AWS Cognito user fields within my own class rather than a dict.  </p>
<pre><code>        for attr in admin_get_user_dict['UserAttributes']:
            setattr(cognito_user, attr['Name'], attr['Value'])
</code></pre>
<p>In Cognito, custom attributes are prefixed by <strong>custom:</strong>[your_attr_name] so there you have it. And yes, you want to avoid this at any cost if you are designing your own classes.</p>
</div>
<span class="comment-copy">How were you able to <b>set</b> an attribute with such a name?</span>
<span class="comment-copy">I am intrigued as to why you would want to do this.</span>
<span class="comment-copy">Thanks for the answer. I used dict.</span>
